# urbaton

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  alembic.ini  credentials.py  env.example  pyproject.toml
backend/backend/: __init__.py  config.py  dependencies.py  server.py
backend/backend/core/: database.py
backend/backend/crud/: __init__.py  books.py  cars.py  parking.py  places.py  reviews.py  tokens.py  users.py
backend/backend/errors/: __init__.py  parkings.py  places.py  users.py
backend/backend/ml/: workload.py
backend/backend/models/: __init__.py  base.py  book_car.py  books.py  cars.py  parking.py  places.py  reviews.py  tokens.py  user_parking.py  users.py
backend/backend/routes/: __init__.py  books.py  cars.py  parking.py  places.py  reviews.py  users.py
backend/backend/schemas/: __init__.py  books.py  cars.py  parking.py  places.py  reviews.py  tokens.py  users.py  validators.py
backend/backend/serializers/: __init__.py  books.py  cars.py  parking.py  places.py  reviews.py  token.py  users.py
backend/backend/utils/: __init__.py  fill.py  generator.py  geocoder.py  token.py
backend/migrations/: env.py
backend/migrations/versions/: 130563434834_.py  3c91ec3dbe18_.py  75cad73b6ef6_.py  774b8bc05733_.py  81c4f42ea81a_.py  a96e5b99ff2d_.py  f35a5403136a_.py
backend/resources/: statistics.csv
frontend/: .env.development  .env.production  package.json  pnpm-lock.yaml
frontend/src/: config.ts  index.scss
frontend/src/api/: AuthService.ts  OpenMapsApiService.ts  ParkingsApiService.ts  PredictApiServcie.ts  (+2 more)
(+38 files in other folders)
