[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ilin Ivan <buran05@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
werkzeug = "^3.0.1"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
gunicorn = "^21.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
